[package]
name = "symlinkccc"
version = "0.1.2"
edition = "2021"
authors = ["Martin Eek Gerhardsen <Martin.Eek.Gerhardsen@sintef.no>"]

# See more keys and their definitions at https://1doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap-verbosity-flag = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.10"
walkdir = "2.3"
which = { version = "4.4" }

[build-dependencies]
config_struct = { version = "0.5", features = ["toml-parsing"] }
