[package]
name = "symlinkccc"
version = "0.2.0"
edition = "2021"
authors = ["Martin Eek Gerhardsen <Martin.Eek.Gerhardsen@sintef.no>"]
license = "MIT"
description = "A small tool for linking compile commands from catkin builds"
homepage = "https://github.com/MartinEekGerhardsen/symlinkccc"
repository = "https://github.com/MartinEekGerhardsen/symlinkccc"
readme = "README.md"
keywords = [
    "robot-operating-system",
    "catkin",
    "language-server-protocol",
    "compile-commands",
]
categories = ["command-line-utilities", "filesystem", "development-tools"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap-verbosity-flag = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.10"
walkdir = "2.3"
which = { version = "4.4" }

[build-dependencies]
const-gen = { version = "1.3" }
