[package]
name = "symlinkccc"
version = "1.1.0"
edition = "2021"
authors = ["Martin Eek Gerhardsen <Martin.Eek.Gerhardsen@sintef.no>"]
license = "MIT"
description = "A small tool for linking compile commands from catkin builds"
homepage = "https://github.com/MartinEekGerhardsen/symlinkccc"
repository = "https://github.com/MartinEekGerhardsen/symlinkccc"
readme = "README.md"
keywords = ["ros", "catkin", "lsp", "compilecommands"]
categories = ["command-line-utilities", "filesystem", "development-tools"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap-verbosity-flag = "2.0"
env_logger = "0.10"
log = "0.4"
nom = "7.1.3"
quick-xml = "0.28.1"
walkdir = "2.3"

[build-dependencies]
const-gen = { version = "1.3" }
